fix gap

--- a/src/scss/list/object.scss
+++ b/src/scss/list/object.scss
@@ -37,6 +37,10 @@
 				.empty { display: block; }
 			}
 
+			.cellContent.isName {
+				.flex { gap: 0px 4px; }
+			}
+
 			.cellContent.c-object {
 				.wrap { white-space: nowrap; }
 			}
